--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
+<head>
     <title>Мой сайт</title>
-  </head>
-  <body>
-    <h1>Это работает!</h1>
-  </body>
+</head>
+<body>
+    <h1>Привет, GitHub Pages!</h1>
+    <p>Этот сайт работает на GitHub.</p>
+</body>
 </html>
